syntax="proto3";

package otp.proto;

import "google/api/annotations.proto";

option go_package = "./pb";

message OTP {
  string code = 1;
  string id = 2;
}

message RequestOTPRequest {
  string phone = 1;
}

message RequestOTPResponse {
  string ref = 1;
}

message VerifyOTPRequest {
  string ref = 1;  
  string code = 2;
  string phone = 3;
}

message VerifyOTPResponse {
  bool success = 1;
  string reason = 2;
}

service OTPService {
  rpc RequestOTP(RequestOTPRequest) returns (RequestOTPResponse) {
    option (google.api.http) = {
      post: "/v1/auth/request-otp"
      body: "*"
    };
  }

  rpc VerifyOTP(VerifyOTPRequest) returns (VerifyOTPResponse) {
    option (google.api.http) = {
      post: "/v1/auth/verify-otp"
      body: "*"
    };
  }

  rpc ResendOTP(RequestOTPRequest) returns (RequestOTPResponse) {
    option (google.api.http) = {
      post: "/v1/auth/resend-otp"
      body: "*"
    };
  }
}